Changes in Version 0.1.7 (2017-xx-xx)
=====================================
- Fix writing of configuration file on Windows
pybats
 - Many small changes and bugfixes (thanks John Haiducek)

Changes in Version 0.1.6 (2016-09-08)
=====================================
- Improvements to test suite (coverage and design)
coordinates
 - Bugfix to allow correct slicing behavior when Coords class has attached ticks
datamanager
 - New module to help in finding, slicing, and manipulating data
 - Function "apply_index": help sort one multi-dimensional data set by another
 - Function "array_interleave": combine data from two arrays to make a new
 - Function "axis_index": prepare indices along the axis of an array
 - Function "flatten_idx": convert an index to an index into flattened array
 - Function "insert_fill" to make explicit gaps in irregular data
 - Function "rev_index": convert an index into its complement
 - Function "values_to_steps": convert values to index of unique, sorted values
datamodel
 - Fix reading JSON-headed ASCII in numpy 1.4, 1.5
 - New function resample to change the time cadence of a SpaceData with
   windowMean
 - SpaceData gained methods for toCDF, toHDF, and toJSONheadedASCII
 - SpaceData keys can be multiple called, see __getitem__
 - New function toRecArray to create numpy record arrays from SpaceData objects
 - New function fromRecArray to create SpaceData objects from numpy record
   arrays
empiricals
 - Fix normalization of Vampola pitch angle model
 - New function omniFromDirectionalFlux, calculates omnidirection flux from
   directional fluxes
 - New function getSolarRotation, returns Carrington or Bartels number
 - New model in getPlasmaPause,  RT1970 -- Rycroft et al 1970
 - New function getSolarProtonSpectra, returns a fluence spectra for SEP events
irbempy
 - updated to latest revision of IRBEM library (rev541)
 - updated AlphaOfK to use vector inputs
 - minor bugfixes and speedups
plot