@@ -3595,13 +3595,17 @@ class _Hyperslice(object):
             if backward:
                 del types[types.index(const.CDF_EPOCH16)]
                 del types[-1]
-            if not lib.supports_int8:
+            elif not lib.supports_int8:
                 del types[-1]
-        elif d is data: #numpy array came in, use its type (or byte-swapped)
+        elif d is data or isinstance(data, numpy.generic):
+            #numpy array came in, use its type (or byte-swapped)
             types = [k for k in lib.numpytypedict
                      if (lib.numpytypedict[k] == d.dtype
                          or lib.numpytypedict[k] == d.dtype.newbyteorder())
                      and not k in lib.timetypes]
+            if (not lib.supports_int8 or backward) \
+               and const.CDF_INT8.value in types:
+                del types[types.index(const.CDF_INT8.value)]
 
         if not types: #not a numpy array, or can't parse its type
             if d.dtype.kind in ('i', 'u'): #integer
@@ -3624,7 +3628,8 @@ class _Hyperslice(object):
                     cutoffs = [2 ** 7, 2 ** 7, 2 ** 8,
                                2 ** 15, 2 ** 16, 2 ** 31, 2 ** 32, 2 ** 63,
                                1.7e38, 1.7e38, 8e307, 8e307]
-                types = [t for (t, c) in zip(types, cutoffs) if c > maxval]
+                types = [t for (t, c) in zip(types, cutoffs) if c > maxval
+                         and (minval >= 0 or minval >= -c)]
                 if (not lib.supports_int8 or backward) \
                        and const.CDF_INT8 in types:
                     del types[types.index(const.CDF_INT8)]
